<resources>
    <string name="hallo">hallo</string>
    <string name="app_name">S-Team</string>
    <string name="app_version">3.3</string>
    <string name="app_company">honda</string>
    <string name="id_client">106</string>
    <string name="action_settings">Settings</string>
    <string name="str_delete">Delete</string>
    <string name="group_create_info">Please provide group name</string>
    <string name="str_not_able_open_room">You have not able to open this room, please update your application.</string>
    <string name="sql_createtable_configurations">CREATE TABLE IF NOT EXISTS configurations(_id INTEGER PRIMARY KEY AUTOINCREMENT, name TEXT, value TEXT);</string>
    <string name="sql_createtable_configurations_index">CREATE INDEX IF NOT EXISTS configuration_name ON configurations(name);</string>
    <string name="sql_createtable_group">CREATE TABLE IF NOT EXISTS groups(_id INTEGER PRIMARY KEY AUTOINCREMENT, name TEXT, jid TEXT, status TEXT);</string>
    <string name="sql_createtable_group_index">CREATE UNIQUE INDEX IF NOT EXISTS group_jid ON groups(jid COLLATE NOCASE);</string>
    <string name="sql_createtable_contact">CREATE TABLE IF NOT EXISTS contacts(_id INTEGER PRIMARY KEY AUTOINCREMENT, name TEXT, realname TEXT, jid TEXT, status TEXT, addrbook_id TEXT,point TEXT,gender TEXT, birthdate TEXT, email TEXT,facebookId TEXT,city TEXT,cp INTEGER DEFAULT 0);</string>
    <string name="sql_altertable_contact">ALTER TABLE contacts ADD COLUMN cp INTEGER DEFAULT 0</string>
    <string name="sql_createtable_contact_index">CREATE UNIQUE INDEX IF NOT EXISTS contact_jid ON contacts(jid COLLATE NOCASE);</string>
    <string name="sql_createtable_conversation">CREATE TABLE IF NOT EXISTS messages(_id INTEGER PRIMARY KEY AUTOINCREMENT, packet_id TEXT, source TEXT, source_info TEXT, destination TEXT, send_date INTEGER DEFAULT 0, delivered_date DEFAULT 0, message TEXT,is_retry INTEGER DEFAULT 0, status INTEGER DEFAULT 1, type TEXT, is_group_chat INTEGER DEFAULT 0);</string>
    <string name="sql_createtable_time_line">CREATE TABLE IF NOT EXISTS time_line(_id INTEGER PRIMARY KEY AUTOINCREMENT,jid TEXT, status TEXT, send_date INTEGER DEFAULT 0);</string>
    <string name="sql_createtable_conversation_index_source">CREATE INDEX IF NOT EXISTS messages_source ON messages(source);</string>
    <string name="sql_createtable_conversation_index_destination">CREATE INDEX IF NOT EXISTS messages_destination ON messages(destination);</string>
    <string name="sql_createtable_conversation_index_packetid">CREATE INDEX IF NOT EXISTS messages_packetid ON messages(packet_id);</string>
    <string name="sql_createtable_rooms">CREATE TABLE IF NOT EXISTS rooms(
        id INTEGER PRIMARY KEY, name TEXT, description TEXT, realname TEXT, link TEXT, type TEXT, is_active TEXT, target_url TEXT);</string>
    <string name="sql_createtable_rooms_trending">CREATE TABLE IF NOT EXISTS trendings(
        id INTEGER PRIMARY KEY, trending_name TEXT, type TEXT);</string>
    <string name="sql_createtable_rooms_string">CREATE TABLE IF NOT EXISTS strings(
        id INTEGER PRIMARY KEY, string_name TEXT);</string>
    <string name="add_rooms">Add room </string>
    <string name="text_empty_selected">You can now add all your rooms.</string>
    <string name="text_manage_selected">You can manage all your rooms.</string>
    <string name="sql_chat_list">SELECT cv.*, co.name, co.jid FROM (
          SELECT * FROM (
            SELECT *, source number from messages where source != ? and type != ? GROUP BY source
            union
            SELECT *, destination number from messages where destination != ? and type !=? GROUP BY destination
            ) t
          GROUP BY number ORDER BY  _id DESC, delivered_date  ) cv
        LEFT JOIN
        (SELECT name, jid FROM contacts UNION SELECT name, jid FROM groups) as co ON cv.number=co.jid;</string>
    <string name="sql_chat_list_find">
			SELECT cv.*, co.name, co.jid FROM
			(
			SELECT * FROM
			(
            SELECT *, source number from messages where source != ? and type != ?
            union
            SELECT *, destination number from messages where destination != ? and type != ?
			)
			t GROUP BY packet_id  ORDER BY  _id DESC, delivered_date
			)
			cv
			LEFT JOIN
			(SELECT name, jid FROM contacts UNION SELECT name, jid FROM groups) as co ON cv.number=co.jid;;

        </string>
    <string name="sql_insert_configuration">INSERT INTO configurations (name, value) VALUES(?, ?);</string>
    <string name="sql_contact_by_jid">SELECT * FROM contacts WHERE jid=?;</string>
    <string name="sql_group_by_jid">SELECT * FROM groups WHERE jid=?;</string>
    <string name="sql_message_by_packetid">SELECT * FROM messages WHERE packet_id=?;</string>
    <string name="sql_all_jid">SELECT * FROM contacts;</string>
    <string name="sql_insert_log_iss">INSERT INTO user (URI_TOKEN, STATUS, USERNAME, EMPLOYEE_NAME,  EMPLOYEE_EMAIL,  EMPLOYEE_NIK,
                            EMPLOYEE_JT,  EMPLOYEE_MULTICOST,  EMPLOYEE_PHONE,  EMPLOYEE_PHOTOS,  ATASAN_1_USERNAME,
                            ATASAN_1_EMAIL,  ATASAN_1_NIK,  ATASAN_1_JT,  ATASAN_1_NAMA,  ATASAN_1_PHONE,  DIVISION_CODE,
                            DIVISION_NAME,  DEPARTEMEN_CODE,  DEPARTEMEN_NAME,  ATASAN_2_USERNAME,  ATASAN_2_EMAIL,
                            ATASAN_2_NIK,  ATASAN_2_JT,  ATASAN_2_NAMA,  ATASAN_2_PHONE,  LIST_APPROVE_ROLE1,  LIST_APPROVE_ROLE2,
                            LIST_REQ_ROLE,  MY_ROLE) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>
    <string name="nav_item_home">Home</string>
    <string name="list_empty">No item</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="tabtitle_contact">Contacts</string>
    <string name="tabtitle_chat">Chats</string>
    <string name="tabtitle_offers">Offers</string>
    <string name="tabtitle_offers_vouchers">Vouchers and Offers</string>
    <string name="tabtitle_rooms">Rooms</string>
    <string name="tabtitle_MyMembers">My Memberships</string>
    <string name="activationcode">Activation Code </string>
    <string name="activationcode_info">We have sent you an SMS</string>
    <string name="activationcode_info_second">with verification code to the number below</string>
    <string name="activationcode_enter_digit">To complete your phone number verification, please enter the 6-digit activation code.</string>
    <string name="action_download">Download</string>
    <string name="action_delete_file">Delete from phone</string>
    <string name="search_video">Search video</string>
    <string name="byonchat_failed_download_file">Failed to download file!</string>
    <string name="byonchat_coba_lagi">Lets try that again</string>
    <string name="byonchat_tidak_responsif">Home isnt responding</string>
    <string name="byonchat_empty_downloaded">Videos you download\nwill appear here</string>
    <string name="byonchat_tidak_responsif_sebab">Thats why we cant show videos right now\nPlease check back later.</string>
    <string name="byonchat_masalah_telusuri_video">There was a problem searching for videos</string>
    <string name="byonchat_corrupted_file">Can not read file, please make sure that is not corrupted file!</string>
    <string name="byonchat_error_no_handler">No handler for this type of file.</string>
    <string name="registration_hint_countrycode">Code</string>
    <string name="registration_hint_phone">Enter your phone number</string>
    <string name="registration_select_country">Select Country</string>
    <string name="registration_resend_new_code">Resend number to get a new code</string>
    <string name="registration_time_remaning">Time remaning</string>
    <string name="registration_no_internet">Network Required \n\n S-Team requires an active Internet connection to go through the setup process. EDGE, 3G, and Wi-Fi are supported.</string>
    <string name="registration_alert_title">Number Confirmation</string>
    <string name="registration_alert_content">\n\nIs your phone number above correct?</string>
    <string name="registration_infoplus">S-Team will send one time SMS message to verify your phone number. Carrier SMS charges may apply</string>
    <string name="error_invalid_number">Invalid phone number</string>
    <string name="title_activity_country">Choose a country</string>
    <string name="error_invalid_code">Invalid country code length (1-3 digits only)</string>
    <string name="registration_info">Please confirm your country code and enter your phone number</string>
    <string name="setting_up_byonchat">Now setting up S-Team\n</string>
    <string name="create_group_byonchat">Create Group Chat</string>
    <string name="name_group_byonchat">Your Group Name</string>
    <string name="title_activity_members_detail">Members Detail</string>
    <string name="delete_all_contacts">DELETE FROM contacts where _id > 1;</string>
    <string name="share_subject">Install S-Team</string>
    <string name="share_title">Invite Friends</string>
    <string name="share_body">Check out S-Team for your smartphone. Download it today from http://campaignmanager.asia/market/</string>
    <string name="pleaseTryAgain">Please try again later</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="rooms_not_available">Rooms not available</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_conversation_delete">Delete</string>
    <string name="menu_conversation_copy">Copy</string>
    <string name="menu_conversation_forward">Forward</string>
    <string name="menu_conversation_tarik">Recall Message</string>
    <string name="menu_conversation_resend">Resend</string>
    <string name="menu_group_create">New Group</string>
    <string name="menu_status">Status</string>
    <string name="menu_profile">Set Profile Picture</string>
    <string name="menu_account">Settings</string>
    <string name="menu_skin">Select Themes</string>
    <string name="menu_broadcast_create">New Broadcast</string>
    <string name="menu_failed_retry">Resend</string>
    <string name="menu_failed_retry_all">Retry All</string>
    <string name="menu_contact_refresh">Refresh Contacts</string>
    <string name="menu_next">Next</string>
    <string name="accept">accept</string>
    <string name="file_too_large">the file size is too large</string>
    <string name="title_activity_select_contact">Select Contact</string>
    <string name="googlemap_static_url">http://maps.googleapis.com/maps/api/staticmap</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="title_activity_confirmation_send_file">Confirmation Send</string>
    <string name="themes_not_available">Themes not available</string>
    <string name="themes_aktif">Themes is being used</string>
    <string name="btntext_apply">Apply</string>
    <string name="btntext_detail">Detail</string>
    <string name="btntext_delete">Delete</string>
    <string name="title_activity_skin_selector">Themes Selection</string>
    <string name="title_activity_create_meme">Create Meme</string>
    <string name="title_activity_search_themes">Search Themes</string>
    <string name="title_activity_acount_setting">Settings</string>
    <string name="title_activity_search_apps">Search Apps</string>
    <string name="title_activity_my_apps">My Apps</string>
    <string name="title_activity_web_view_byon">Web ViewByon Activity</string>
    <string name="use_voucher">Use Voucher</string>
    <string name="transfer_voucher">Transfer Voucher</string>
</resources>