<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/byonchat_white">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetEnd="0dp"
            android:contentInsetRight="0dp"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <android.support.v7.widget.SearchView
                android:id="@+id/searchtext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin8"
                android:layout_marginRight="@dimen/margin8"
                android:layout_marginBottom="@dimen/margin8"
                android:hint="@string/search_video"
                android:iconifiedByDefault="false"
                android:textColor="@color/byonchat_primary_text"
                android:textColorHint="@android:color/darker_gray"
                android:textCursorDrawable="@null"
                android:textSize="14sp"
                app:iconifiedByDefault="false"
                app:searchIcon="@null">

            </android.support.v7.widget.SearchView>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:id="@+id/frame_internet_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/img_internet_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitEnd"
            android:src="@drawable/error_tidak_responsif" />

        <TextView
            android:id="@+id/text_internet_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_internet_error"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:text="@string/byonchat_tidak_responsif"
            android:textAlignment="center"
            android:textColor="@color/byonchat_primary_text"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_internet_error_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_internet_error"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/byonchat_tidak_responsif_sebab"
            android:textAlignment="center"
            android:textColor="@color/byonchat_secondary_text"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/frame_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/img_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitEnd"
            android:src="@drawable/error_telusuri_video" />

        <TextView
            android:id="@+id/text_warning_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_error"
            android:layout_marginTop="15dp"
            android:text="@string/byonchat_coba_lagi"
            android:textAlignment="center"
            android:textColor="@color/byonchat_primary_text"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_warning_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_warning_title"
            android:layout_marginTop="10dp"
            android:text="@string/byonchat_masalah_telusuri_video"
            android:textAlignment="center"
            android:textColor="@color/byonchat_secondary_text"
            android:textSize="14sp" />

    </RelativeLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh_videotube"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar">

        <com.byonchat.android.ui.view.ByonchatRecyclerView
            android:id="@+id/list_videotube"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

        </com.byonchat.android.ui.view.ByonchatRecyclerView>
    </android.support.v4.widget.SwipeRefreshLayout>


</RelativeLayout>
